--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -59,6 +59,7 @@
 @import "../components/site-header/site-header";
 @import "../components/feature-with-small-image/feature-with-small-image";
 @import "../components/feature-set/feature-set";
+@import "../components/pagination/pagination";
 @import "../components/home-announcement/home-announcement";
 @import "../components/ecosystem-home-hero/ecosystem-home-hero";
 @import "../components/personal-profile-info-card/personal-profile-info-card";
