--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -27,6 +27,7 @@
 
 // Custom Components
 @import "components/overrides";
+@import "components/gallery";
 @import "../components/button/button";
 @import "../components/button-set/button-set";
 @import "../components/link-secondary/link-secondary";
