--- a/src/scss/editor.scss
+++ b/src/scss/editor.scss
@@ -38,8 +38,8 @@
 @import "../components/card-set/card-set";
 @import "../components/hero/hero";
 @import "../components/feature-with-large-image/feature-with-large-image";
-@import "../components/callout/callout";
-@import "../components/callout-inset/callout-inset";
+// @import "../components/callout/callout";
+// @import "../components/callout-inset/callout-inset";
 @import "../components/external-news-story/external-news-story";
 @import "../components/video-embed/video-embed";
 @import "../components/table/table";
@@ -49,16 +49,16 @@
 @import "../components/call-to-action/call-to-action";
 @import "../components/image-grid/image-grid";
 @import "../components/image-grid-with-text/image-grid-with-text";
+@import "../components/stat/stat";
 @import "../components/statistic/statistic";
-@import "../components/statistic-with-text/statistic-with-text";
 @import "../components/multi-column-content/multi-column-content";
 @import "../components/blockquote/blockquote";
 @import "../components/modal/modal";
 @import "../components/carousel/carousel";
 @import "../components/site-footer/site-footer";
 @import "../components/site-header/site-header";
-@import "../components/callout-with-image/callout-with-image";
-@import "../components/callout-set/callout-set";
+// @import "../components/callout-with-image/callout-with-image";
+// @import "../components/callout-set/callout-set";
 @import "../components/home-announcement/home-announcement";
 @import "../components/ecosystem-home-hero/ecosystem-home-hero";
 @import "../components/personal-profile-info-card/personal-profile-info-card";
